src/objects/Zopa_API_Security__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Access_Token1__c</fullName>
        <label>Access_Token1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token2__c</fullName>
        <label>Access_Token2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token3__c</fullName>
        <label>Access_Token3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Collections1__c</fullName>
        <label>Access_Token_Collections1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Collections2__c</fullName>
        <label>Access_Token_Collections2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Collections3__c</fullName>
        <label>Access_Token_Collections3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Expiry_Date__c</fullName>
        <label>Access Token Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Grant_Type_Collections__c</fullName>
        <label>Grant_Type_Collections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Client_Id_Collections__c</fullName>
        <label>OAuth_Client_Id_Collections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Client_Id__c</fullName>
        <label>OAuth_Client_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Client_Secret_Collections__c</fullName>
        <label>OAuth_Client_Secret_Collections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Client_Secret__c</fullName>
        <label>OAuth_Client_Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Collections__c</fullName>
        <label>Scope_Collections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_OAuth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use OAuth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X_Api_Key_Header__c</fullName>
        <label>X Api Key Header</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Zopa API Security</label>
</CustomObject>